# iiq2rgbi

./: .gitignore  CMakeLists.txt  README.md  main.cpp
testfiles/: YC030057_2020_12_20.txt  YD030006_2017_01_30.txt
